Adding Stylesheet and head tag for infomation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Portfolio</title>
+        <!-- for top page imagie for later <link rel="shortcut icon" type="image/PNG" href="link"/>-->
+        <link href="Stylesheet.css" rel="stylesheet">
+    </head>
     
 </html>
