--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
         <title>Portfolio</title>
         <!-- for top page imagie for later <link rel="shortcut icon" type="image/PNG" href="link"/>-->
         <link href="Stylesheet.css" rel="stylesheet">
+        <!--Made by Aiden Ireland, July 17 / 23 -->
     </head>
-    
+    <body>
+        <header>
+
+            <nav>
+                <hr>
+                    Insert Nav here
+                    Will figure out page map after I insert my page map
+                <hr>
+            </nav>
+        </header>
+
+    </body>
 </html>
