--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html>
     <head>
         <title>Portfolio</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- for top page imagie for later <link rel="shortcut icon" type="image/PNG" href="link"/>-->
         <link href="Stylesheet.css" rel="stylesheet">
         <!--Made by Aiden Ireland, July 17 / 23 -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
+    <div id="whole">
     <body>
         <header>
+            <div></div>
 
             <nav>
                 <hr>
@@ -18,4 +25,5 @@
         </header>
 
     </body>
+    </div>
 </html>
