Adding profile to page

--- a/index.html
+++ b/index.html
@@ -14,15 +14,64 @@
     <div id="whole">
     <body>
         <header>
-            <div></div>
-
+            
+Insert Text her for title
+        </header>
             <nav>
                 <hr>
                     Insert Nav here
                     Will figure out page map after I insert my page map
                 <hr>
             </nav>
-        </header>
+        <main>
+            <!--Profile div (For context when adding css)-->
+            <div>
+                <h2>Profile</h2>
+                <img src="imagies/Profile" alt="Profile" width="300" id ="head-profile">
+                <ul>
+            <table>
+            <tbody><tr>
+                <td>
+                    <h3>Name:</h3>
+                </td>
+                <td>
+                    Aiden Ryhan Ireland
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h3>Linkdin:</h3>
+                </td>
+                <td><a href="https://www.linkedin.com/in/aiden-ireland-684624251/">Aiden Ireland</a></td>
+            </tr>
+            <tr>
+                <td>
+                    <h3>Github:</h3>
+                </td>
+                <td><a href="https://github.com/AidenRIreland">AidenRIreland</a></td>
+            </tr>
+            <tr>
+                <td>
+                    <h3>Instagram:</h3>
+                </td>
+                <td><a href="https://github.com/AidenRIreland">AidenRIreland</a></td>
+            </tr>
+            <tr>
+                <td>
+                    <h3>Phone:</h3>
+                </td>
+                <td>+1 (416) 662 - 0062</td>
+            </tr>
+            <tr>
+                <td>
+                    <h3>Contact Email:</h3>
+                </td>
+                <td>aidenireland2004@gmail.com</td>
+            </tr>
+        </tbody>
+        </table>
+         </ul>
+        </main>
 
     </body>
     </div>
