Final edits to CSS + HTML before I log off to work

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <body>
         <header>
             
-Insert Text her for title
+Insert Text her for title Later
         </header>
             <nav>
                 <hr>
-                    Insert Nav here
-                    Will figure out page map after I insert my page map
+                    Portfolio, Resume and Contact Page will be add in the future
                 <hr>
             </nav>
         <main>
@@ -54,7 +53,7 @@ Insert Text her for title
                 <td>
                     <h3>Instagram:</h3>
                 </td>
-                <td><a href="https://github.com/AidenRIreland">AidenRIreland</a></td>
+                <td><a href="https://www.instagram.com/aidenrireland/">AidenRIreland</a></td>
             </tr>
             <tr>
                 <td>
