--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
+    <div class = "bg">
     <div id="whole">
     <body>
         <header>
@@ -70,8 +71,10 @@ Insert Text her for title Later
         </tbody>
         </table>
          </ul>
+         <hr style="border-width: 3px;">
         </main>
 
     </body>
+    </div>
     </div>
 </html>
