Tried to fix resizing on mobile, need help later

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             
-Insert Text her for title Later
+Aiden Ireland, Software Enginnering/Web Design Student
         </header>
             <nav>
                 <hr>
@@ -72,7 +72,12 @@ Insert Text her for title Later
         </table>
          </ul>
          <hr style="border-width: 3px;">
+         <h2>About</h2>
+         <p>Hello, im Aiden Ireland and welcome to my page/portfolio website.<br><br> I am currently enrolled at Centennial College, completeing my college advance diploma in
+             <a href="https://www.centennialcollege.ca/programs-courses/full-time/software-engineering-technology/">Software Enginnering Technology</a>. My main goal while in college is to learn as much useful skills as I can to help me on my career path while making connections with my fellow students, and
+            </p>
         </main>
+
 
     </body>
     </div>
