--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@ Aiden Ireland, Software Enginnering/Web Design Student
          <h2>About</h2>
          <p>Hello, im Aiden Ireland and welcome to my page/portfolio website.<br><br> I am currently enrolled at Centennial College, completeing my college advance diploma in
              <a href="https://www.centennialcollege.ca/programs-courses/full-time/software-engineering-technology/">Software Enginnering Technology (Co-op route)</a>. My main goal while in college is to learn as much useful and pratical skills as I can to help me on my career path while making connections with my fellow students on campus, Computer Science
-              club and in my classes, and to achive a great overall GPA in my classes
+              club and in my classes, and to achive a great overall GPA in my classes.
             </p>
+        <h2>Syntax's</h2>    
         </main>
 
 
