--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         </header>
             <nav>
                 <hr>
-                    Portfolio, Resume and Contact Page will be add in the future
+                    <a class="menu" href="index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="menu" href="Portfolio.html">Portfolio</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="menu" href="Resume.html">Resume</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="menu" href="Contact.html">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 <hr>
             </nav>
         <main>
